[package]
name = "scarab"
version = "0.1.0"
edition = "2024"
description = "Scarab OS package manager"
license = "MIT"

[dependencies]
ureq = { version = "3", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
colored = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
